# Screening-Trading

./: .env.example  .gitignore  .pre-commit-config.yaml  AUDIT.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  Makefile  README.md  SECURITY.md  SKILL.md  TESTING.md  constraints.txt  interactive.html  pyproject.toml
.claude/: settings.json
.claude/agents/: db-auditor.md  friction-clusterer.md  leakage-hunter.md  quant-critic.md  session-auditor.md  vault-architect.md
.claude/commands/: audit-secrets.md  brief.md  close-session.md  company-note.md  deploy.md
.claude/hooks/: file_guard.py  friction_log.py
.github/: dependabot.yml
.github/workflows/: ci.yml  gitleaks.yml  keepalive.yml  pages.yml  paper.yml
apps/api/: main.py  payloads.py  sections_data.py  snapshot.py
apps/web/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
config/: alerts.yaml  claude_desktop_config.example.json  data_sources.yaml  execution.yaml  factors.yaml  features.yaml  macro.yaml  macro_impact.yaml  macro_publication_lags.yaml  mcp_tradingview.yaml  mobile_universe.csv  risk.yaml  risk_top1pct.yaml  screening.yaml  universe.yaml
config/strategies/: ma_crossover.yaml
dashboard/: claude_ops.py
data/: delisted.csv  delisted.csv.example  delisted_seed.csv  market_caps.json  news.csv.example  niche_crypto_midcap.csv  niche_energy.csv  niche_forex_em.csv  niche_obscure.csv  niche_re.csv  niche_smallcap_tech.csv  niche_util.csv
data/seed/: aex.csv  cac40.csv  commodities_top20.csv  crypto_extra.csv  crypto_top100.csv  etf_extra.csv  etf_top100.csv  forex_top20.csv  indices_top20.csv  us_extended.csv  us_megacap.csv
deploy/hf_space/: README.md  app.py  requirements.txt
docs/: AUDIT_10AXES.md  AUDIT_SITE.md  CASE_STUDY.md  DEPLOY.md  MODULES.md  REAL_DATA.md  ROADMAP.md
docs/prompts/: audit-hedge-fund.md  comite-quant.md
integrations/n8n/: README.md  tradingview-to-risk.json
research/: hypotheses.jsonl
scripts/: backtest_breakout.py  backtest_earnings.py  backtest_megacap.py  backtest_ml.py  backtest_pead_smid.py  backtest_preset.py  backtest_sentiment.py  backtest_weighting.py  bitmart_check.py  breakout_study_cli.py  build_niche.py  build_site.py  build_static_site.py  build_universe.py  build_watchlist.py  calibrate_preset.py  check_all.sh  check_build.py  check_db.py  contracts_check.py  cron_daily.sh  cron_live.sh  crypto_brief_cli.py  crypto_cockpit_cli.py  crypto_core_sweep.py  crypto_onchain_cli.py  crypto_screen_cli.py  daily_brief.py  data_audit.py  demo_alerts.py  demo_backtest.py  demo_macro_regime.py  demo_ml.py  demo_ops.py  demo_paper_loop.py  demo_walkforward.py  dump_static.py  event_study_cli.py  export_preset_report.py  export_tearsheet.py  (+48 more)
tests/: _helpers.py  test_certification_harness.py  test_contracts_check.py  test_data_integrity.py  test_kpi_to_supabase.py  test_notion_sync.py  test_smoke_all.py  test_vault_search.py
tests/ml/: test_cv.py  (+12 more)
vault/: 00_INDEX.md  01_ARCHITECTURE.md  02_DECISIONS.md  03_TODO.md  04_JOURNAL.md  05_DATA_SOURCES.md  05_DATA_SOURCES_ROADMAP.md  06_STRATEGIES.md  07_RISK_POLICY.md  08_DATA_MODEL.md  09_RESEARCH.md  10_BACKTEST_RESULTS.md  11_DESIGN_SYSTEM.md  12_FACTORS.md  12_MANIFESTE_HONNETETE.md  14_FULL_REVIEW.md  15_CERTIFICATION.md  16_BROKER_ACTIVATION.md
(+381 files in other folders)
